add all basic python tutorial post

--- a/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
+++ b/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
@@ -23,7 +23,8 @@ Python 是一種高階、直譯式的程式語言，誕生於1991年，以其簡
 
 Python 主要有分為 Python2.x、Python3.x 兩大版本，彼此之間語法上有些微差異，但目前 Python2.x 官方已暫停維護，故目前幾乎所有 Python 都是泛指 Python 3.x
 
-![Untitled](Python-0-%E7%A8%8B%E5%BC%8F%E8%A8%AD%E8%A8%88%E5%85%A5%E9%96%80%EF%BC%9A%E6%B7%BA%E9%A1%AF%E6%98%93%E6%87%82%E7%9A%84%E5%9F%BA%E7%A4%8E%E4%BB%8B%E7%B4%B9%20f4f5613bb0b84a269c7899042f9a7014/Untitled.png)
+![Untitled](/assets/img/post_img/Python-0-程式設計入門：淺顯易懂的基礎介紹%20f4f5613bb0b84a269c7899042f9a7014/Untitled.png)
+
 
 ### 二、安裝 Python、準備開發環境
 
@@ -113,9 +114,8 @@ while count < 5:
     count += 1 # 「count = count + 1」的簡寫法
 ```
 
-![輸出結果](Python-0-%E7%A8%8B%E5%BC%8F%E8%A8%AD%E8%A8%88%E5%85%A5%E9%96%80%EF%BC%9A%E6%B7%BA%E9%A1%AF%E6%98%93%E6%87%82%E7%9A%84%E5%9F%BA%E7%A4%8E%E4%BB%8B%E7%B4%B9%20f4f5613bb0b84a269c7899042f9a7014/Untitled%201.png)
-
-輸出結果
+![輸出結果](/assets/img/post_img/Python-0-程式設計入門：淺顯易懂的基礎介紹%20f4f5613bb0b84a269c7899042f9a7014/Untitled%201.png)
+_輸出結果_
 
 ### 八、函數 (Function)
 
