fix prompt syntax

--- a/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
+++ b/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
@@ -10,10 +10,8 @@ tags: [基礎, 概念解惑]
 
 歡迎來到 Python 程式設計的世界！這是針對完全沒有任何基礎的朋友寫的 Python 單元教學，我將嘗試用比較生動簡單的說明方式與舉例幫助讀者了解 Python 的樣貌以及使用方法。
 
-<aside>
-❗ 以下只是給讀者一個整體概念，部分內容現在看不懂是正常的~可以單獨找後面對應單元來看，之後再來回顧，會更了解！
-
-</aside>
+> 以下只是給讀者一個整體概念，部分內容現在看不懂是正常的~可以單獨找後面對應單元來看，之後再來回顧，會更了解！
+{: .prompt-tip }
 
 ### 一、什麼是 Python？
 
@@ -166,10 +164,8 @@ print(my_dog.name)  # Buddy
 print(my_dog.bark())  # Woof!
 ```
 
-<aside>
-❗ 初學程式，這部份看不懂很正常，可以先有印象即可，這部分不用太在意。
-
-</aside>
+> 初學程式，這部份看不懂很正常，可以先有印象即可，這部分不用太在意。
+{: .prompt-tip }
 
 ### 十一、結語
 
