--- a/_posts/2024-08-03-python-2-基本概念-看一本書要先讀大綱-程式亦然.md
+++ b/_posts/2024-08-03-python-2-基本概念-看一本書要先讀大綱-程式亦然.md
@@ -24,7 +24,7 @@ tags: [基礎, 程式區塊]
 2. 功能定義區：
 Function的定義通常會放在程式碼的前面，因為必須先定義，後面程式碼在引用時，電腦才能找得到。
 3. 主程式起始位置：
-整個程式開始運作的起點，以下廚做比喻，前面「套件引用」、「功能定義」可以想像成是煮菜前的備料，主程式起始比較像是「開始主菜」的過程。
+整個程式開始運作的起點，以下廚做比喻，前面「套件引用」、「功能定義」可以想像成是煮菜前的備料，主程式起始比較像是「開始煮菜」的過程。
 4. 邏輯區塊：
 Python 中劃分程式區塊主要是透過「縮排」來進行，也就是看起來像是「空格」的東西，跟文章有分段落一樣，程式也有分不同區塊，縮排錯誤就會導致程式邏輯直接錯誤，因此非常重要。
     
