--- a/_posts/2024-08-04-python-11-檔案讀寫-讓程式不止執行-還能幫你做紀錄.md
+++ b/_posts/2024-08-04-python-11-檔案讀寫-讓程式不止執行-還能幫你做紀錄.md
@@ -121,10 +121,8 @@ print(content)
 
 為了更好地理解檔案 I/O 操作，我們來看一個完整的股市相關案例~
 
-<aside>
-💡 假設我們要保存每日抓到的股票價格到檔案，然後再讀取這些價格並計算平均值。
-
-</aside>
+> 假設我們要保存每日抓到的股票價格到檔案，然後再讀取這些價格並計算平均值。
+{: .prompt-info }
 
 1. **寫入每日股票價格到檔案**：
     
