--- a/_posts/2024-08-04-python-補充-學習資源包.md
+++ b/_posts/2024-08-04-python-補充-學習資源包.md
@@ -61,7 +61,5 @@ tags: [基礎, 資源包]
 
 當然以上只是我個人用順手的，未來讀者在學習的路上，也會找到更適合自己的工具，並加入自己的工具箱中~這邊只是提供一些基本好用的資源給各位。
 
-<aside>
-🌟 本篇會持續補充有用資源~
-
-</aside>
+> 本篇會持續補充有用資源~
+{: .prompt-info }
