--- a/_posts/2024-08-03-python-4-運算子介紹-程式中穿針引線的角色.md
+++ b/_posts/2024-08-03-python-4-運算子介紹-程式中穿針引線的角色.md
@@ -53,10 +53,8 @@ tags: [基礎, 運算]
 
 ![Untitled](/assets/img/post_img/Python-4-運算子介紹—程式中穿針引線的角色%20515a217856224bb4bd167ebe88e01028/Untitled%202.png)
 
-<aside>
-📌 這邊要注意，「=」是「指定運算子」，例如：`x = 4`代表「把 4 放進 x 變數中」，並不是我們在數學上「兩者相等」的比較概念；而`x == 4`的概念在 Python 中才是比較兩者是否相等的表示法
-
-</aside>
+> 這邊要注意，「=」是「指定運算子」，例如：`x = 4`代表「把 4 放進 x 變數中」，並不是我們在數學上「兩者相等」的比較概念；而`x == 4`的概念在 Python 中才是比較兩者是否相等的表示法
+{: .prompt-info }
 
 ### 三、複合指定運算子
 
@@ -71,10 +69,8 @@ tags: [基礎, 運算]
 ![輸出結果](/assets/img/post_img/Python-4-運算子介紹—程式中穿針引線的角色%20515a217856224bb4bd167ebe88e01028/0bf22850-1617-4ecd-9685-59770c84588d.png)
 _輸出結果_
 
-<aside>
-📌 複合指定運算子，間單來說就是把多個運算子寫法表示得更簡潔，以上面例子來說，`x+=y` 就等價於`x = x + y`的表達式，這樣可以增加寫程式的簡潔性，不用重複寫同樣內容
-
-</aside>
+> 複合指定運算子，間單來說就是把多個運算子寫法表示得更簡潔，以上面例子來說，`x+=y` 就等價於`x = x + y`的表達式，這樣可以增加寫程式的簡潔性，不用重複寫同樣內容
+{: .prompt-info }
 
 ### 四、邏輯運算子
 
@@ -90,10 +86,8 @@ _輸出結果_
 
 ![Untitled](/assets/img/post_img/Python-4-運算子介紹—程式中穿針引線的角色%20515a217856224bb4bd167ebe88e01028/ac46a62e-896a-4883-9be6-b4175d0bf468.png)
 
-<aside>
-📌 實際上邏輯運算子不只上面三種，也有其他比較複雜的運算子，但上面三種在一般程式開發中其實已經可以應付 80% 以上的情境，讀者可以未來有興趣再更深入研究即可
-
-</aside>
+> 實際上邏輯運算子不只上面三種，也有其他比較複雜的運算子，但上面三種在一般程式開發中其實已經可以應付 80% 以上的情境，讀者可以未來有興趣再更深入研究即可
+{: .prompt-info }
 
 ### 五、結語
 
