fix tags and add new about content

--- a/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
+++ b/_posts/2024-08-03-python-0-程式設計入門-淺顯易懂的基礎介紹.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-0-程式設計入門：淺顯易懂的基礎介紹
 date: 2024-08-03 19:10 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 概念解惑]
 ---
 
