--- a/_posts/2024-08-03-python-2-基本概念-看一本書要先讀大綱-程式亦然.md
+++ b/_posts/2024-08-03-python-2-基本概念-看一本書要先讀大綱-程式亦然.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-2-基本概念—看一本書要先讀大綱，程式亦然
 date: 2024-08-03 21:37 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 程式區塊]
 ---
 ### 零、前言
