--- a/_posts/2024-08-03-python-4-運算子介紹-程式中穿針引線的角色.md
+++ b/_posts/2024-08-03-python-4-運算子介紹-程式中穿針引線的角色.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-4-運算子介紹—程式中穿針引線的角色
 date: 2024-08-03 21:43 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 運算]
 ---
 ### 零、前言
