--- a/_posts/2024-08-04-python-11-檔案讀寫-讓程式不止執行-還能幫你做紀錄.md
+++ b/_posts/2024-08-04-python-11-檔案讀寫-讓程式不止執行-還能幫你做紀錄.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-11-檔案讀寫—讓程式不止執行，還能幫你做紀錄
 date: 2024-08-04 00:41 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 檔案讀寫]
 ---
 ### 零、前言
