--- a/_posts/2024-08-04-python-補充-學習資源包.md
+++ b/_posts/2024-08-04-python-補充-學習資源包.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-(補充)學習資源包
 date: 2024-08-04 00:56 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 資源包]
 ---
 ### 零、前言
