--- a/_posts/2024-08-03-python-1-超簡單-給-0-基礎的程式邏輯概念.md
+++ b/_posts/2024-08-03-python-1-超簡單-給-0-基礎的程式邏輯概念.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-1-超簡單！給 0 基礎的程式邏輯概念
 date: 2024-08-03 21:33 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 概念解惑]
 ---
 ### 零、前言
