--- a/_posts/2024-08-03-python-3-變數與資料類型-數值-布林-字串介紹-程式裡的元素週期表.md
+++ b/_posts/2024-08-03-python-3-變數與資料類型-數值-布林-字串介紹-程式裡的元素週期表.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-3-變數與資料類型—數值、布林、字串介紹—程式裡的元素週期表
 date: 2024-08-03 21:41 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 資料結構]
 ---
 ### 零、前言
