--- a/_posts/2024-08-04-python-補充-大括號-中括號-小括號傻傻分不清楚.md
+++ b/_posts/2024-08-04-python-補充-大括號-中括號-小括號傻傻分不清楚.md
@@ -2,7 +2,7 @@
 layout: post
 title: Python-(補充)大括號、中括號、小括號傻傻分不清楚
 date: 2024-08-04 00:48 +0800
-categories: [超新手 Python 教學]
+categories: [超新手 Python 教學系列課程]
 tags: [基礎, 概念解惑]
 ---
 ### 零、前言
