--- a/_posts/2024-08-03-python-1-超簡單-給-0-基礎的程式邏輯概念.md
+++ b/_posts/2024-08-03-python-1-超簡單-給-0-基礎的程式邏輯概念.md
@@ -4,6 +4,9 @@ title: Python-1-超簡單！給 0 基礎的程式邏輯概念
 date: 2024-08-03 21:33 +0800
 categories: [超新手 Python 教學系列課程]
 tags: [基礎, 概念解惑]
+image:
+    path: /assets/img/post_img/Python-0-程式設計入門：淺顯易懂的基礎介紹%20f4f5613bb0b84a269c7899042f9a7014/Untitled.png
+    alt: Python 程式設計入門系列
 ---
 ### 零、前言
 
