--- a/_posts/2025-05-23-面對快速變遷與焦慮，「慢」才是快.md
+++ b/_posts/2025-05-23-面對快速變遷與焦慮，「慢」才是快.md
@@ -5,7 +5,7 @@ date: 2025-05-23 21:50 +0800
 categories: [思考&體悟]
 tags: [自我學習, 自我成長, 情緒管理]
 image:
-    path: /assets/img/post_img/面對快速變遷與焦慮，「慢」才是快/cover.png
+    path: /assets/img/post_img/2025-05-23-slow-is-fast/cover.png
     alt: 面對快速變遷與焦慮，「慢」才是快
 ---
 
